닉네임 변경, 비밀번호 변경 기능 구현

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -63,5 +63,9 @@ spring:
 jwt:
   jwt-key: "c7L0+z1bI67OpGIeYN9NcKgXBsHKiR2RlYX1Vzj4ULA="
 
+expiration-time:
+  access: 1800000
+  refresh: 86400000
+
 
 
