--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -16,6 +16,9 @@ spring:
 #        show_sql: true
         format_sql: true
 
+  redis:
+    host: localhost
+    port: 6379
 
   security:
     oauth2:
