--- a/server/build.gradle
+++ b/server/build.gradle
@@ -36,6 +36,9 @@ dependencies {
 
 	asciidoctorExt "org.springframework.restdocs:spring-restdocs-asciidoctor:${asciidocVersion}"
 	testImplementation "org.springframework.restdocs:spring-restdocs-mockmvc:${asciidocVersion}"
+//	// https://mvnrepository.com/artifact/org.springframework.restdocs/spring-restdocs-core
+//	implementation 'org.springframework.restdocs:spring-restdocs-core:2.0.7'
+
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
