--- a/server/.gitignore
+++ b/server/.gitignore
@@ -40,7 +40,7 @@ target
 secrets.yml
 .gradletasknamecache
 .sts4-cache
-application.yml
+application*.yml
 /src/main/resources/static/docs/
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
