--- a/server/.gitignore
+++ b/server/.gitignore
@@ -42,6 +42,7 @@ secrets.yml
 .sts4-cache
 application*.yml
 /src/main/resources/static/docs/
+logs/
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
